--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#660000</color>
-    <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#ff1a1a</color>
+    <color name="colorPrimary">#069BDC</color>
+    <color name="colorPrimaryDark">#035E86</color>
+    <color name="colorAccent">#037A86</color>
     <color name="white">#ffffff</color>
 </resources>
