--- a/app/src/main/res/layout/activity_plot.xml
+++ b/app/src/main/res/layout/activity_plot.xml
@@ -1,13 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_margin="20dp"
-    android:orientation="vertical"
+    android:layout_margin="10dp"
     tools:context=".PlotActivity">
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
     <Button
         android:id="@+id/saveID"
         android:layout_width="match_parent"
@@ -36,5 +39,5 @@
         android:layout_height="200dp"
         android:layout_centerHorizontal="true">
     </com.github.mikephil.charting.charts.LineChart>
-
-</LinearLayout>
+    </LinearLayout>
+    </ScrollView>
