--- a/app/src/main/res/layout/activity_plot.xml
+++ b/app/src/main/res/layout/activity_plot.xml
@@ -1,36 +1,92 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_margin="10dp"
+    android:layout_margin="5dp"
+    android:orientation="vertical"
     tools:context=".PlotActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+        <CheckBox
+            android:id="@+id/checkboxXAxis"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:buttonTint="@color/colorPrimary"
+            android:layout_margin="5dp"/>
+        <TextView
+            android:id="@+id/tvXAxis"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="3"
+            android:text="@string/XAxis"
+            android:layout_margin="5dp"/>
 
-    <com.github.mikephil.charting.charts.LineChart
-        android:id="@+id/accXChartID"
-        android:layout_width="match_parent"
-        android:layout_height="250dp"
-        android:layout_centerHorizontal="true">
-    </com.github.mikephil.charting.charts.LineChart>
+        <CheckBox
+            android:id="@+id/checkboxYAxis"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:buttonTint="@color/colorPrimary"
+            android:layout_margin="5dp" />
+        <TextView
+            android:id="@+id/tvYAxis"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/YAxis"
+            android:layout_weight="3"
+            android:layout_margin="5dp"/>
 
-    <com.github.mikephil.charting.charts.LineChart
-        android:id="@+id/accYChartID"
-        android:layout_width="match_parent"
-        android:layout_height="250dp"
-        android:layout_centerHorizontal="true">
-    </com.github.mikephil.charting.charts.LineChart>
-
-    <com.github.mikephil.charting.charts.LineChart
-        android:id="@+id/accZChartID"
-        android:layout_width="match_parent"
-        android:layout_height="250dp"
-        android:layout_centerHorizontal="true">
-    </com.github.mikephil.charting.charts.LineChart>
+        <CheckBox
+            android:id="@+id/checkboxZAxis"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:buttonTint="@color/colorPrimary"
+            android:layout_margin="5dp"
+            android:checked="true"/>
+        <TextView
+            android:id="@+id/tvZAxis"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/ZAxis"
+            android:layout_weight="1"
+            android:layout_margin="5dp"/>
     </LinearLayout>
-    </ScrollView>
+
+    <ScrollView
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:id="@+id/linearLayout">
+
+        <com.github.mikephil.charting.charts.LineChart
+            android:id="@+id/accXChartID"
+            android:layout_width="match_parent"
+            android:layout_height="250dp"
+            android:visibility="invisible">
+        </com.github.mikephil.charting.charts.LineChart>
+
+        <com.github.mikephil.charting.charts.LineChart
+            android:id="@+id/accYChartID"
+            android:layout_width="match_parent"
+            android:layout_height="250dp"
+            android:visibility="invisible">
+        </com.github.mikephil.charting.charts.LineChart>
+
+        <com.github.mikephil.charting.charts.LineChart
+            android:id="@+id/accZChartID"
+            android:layout_width="match_parent"
+            android:layout_height="250dp"
+            android:visibility="visible">
+
+        </com.github.mikephil.charting.charts.LineChart>
+    </LinearLayout>
+</ScrollView>
+</LinearLayout>
