--- a/app/src/main/res/layout/activity_plot.xml
+++ b/app/src/main/res/layout/activity_plot.xml
@@ -74,6 +74,20 @@
             </com.github.mikephil.charting.charts.LineChart>
 
             <com.github.mikephil.charting.charts.LineChart
+                android:id="@+id/HRChartID"
+                android:layout_width="match_parent"
+                android:layout_height="250dp"
+                android:visibility="visible">
+            </com.github.mikephil.charting.charts.LineChart>
+
+            <TextView
+                android:id="@+id/HRValue"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:layout_margin="5dp"/>
+
+            <com.github.mikephil.charting.charts.LineChart
                 android:id="@+id/accXChartID"
                 android:layout_width="match_parent"
                 android:layout_height="250dp"
