--- a/app/src/main/res/layout/activity_plot.xml
+++ b/app/src/main/res/layout/activity_plot.xml
@@ -66,6 +66,13 @@
             android:orientation="vertical"
             android:id="@+id/linearLayout">
 
+            <TextView
+                android:id="@+id/HRValue"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="right"
+                android:layout_margin="5dp"/>
+
             <com.github.mikephil.charting.charts.LineChart
                 android:id="@+id/accZChartID"
                 android:layout_width="match_parent"
@@ -79,13 +86,6 @@
                 android:layout_height="250dp"
                 android:visibility="visible">
             </com.github.mikephil.charting.charts.LineChart>
-
-            <TextView
-                android:id="@+id/HRValue"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:layout_margin="5dp"/>
 
             <com.github.mikephil.charting.charts.LineChart
                 android:id="@+id/accXChartID"
