--- a/app/src/main/res/layout/activity_plot.xml
+++ b/app/src/main/res/layout/activity_plot.xml
@@ -71,6 +71,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="right"
+                android:textColor="@color/colorPrimary"
+                android:textSize="22dp"
                 android:layout_margin="5dp"/>
 
             <com.github.mikephil.charting.charts.LineChart
