--- a/app/src/main/res/menu/up_menu.xml
+++ b/app/src/main/res/menu/up_menu.xml
@@ -5,7 +5,7 @@
     <item
         android:id="@+id/info"
         android:icon="@drawable/ic_info_black_24dp"
-        android:title="info"
+        android:title="@string/info"
         app:showAsAction="ifRoom"
         />
 </menu>
